[metadata]
name = XStatic-Patternfly-Bootstrap-Treeview
description = Patternfly Bootstrap Treeview 2.1.3 (XStatic packaging standard)
description-file = README.rst
maintainer = David Moreau Simard
maintainer-email = dmsimard@redhat.com
home-page = https://www.patternfly.org/
keywords = patternfly bootstrap treeview xstatic
license = Apache v2
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
